2004-11-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/grob-scheme.cc (LY_DEFINE): add new function ly:grob-key.

	* lily/include/object-key-undumper.hh (Module): new file.

	* lily/object-key-undumper.cc (Module): New file. Deserialize
	keys. SCM bindings

	* lily/object-key-dumper.cc (Object_key_dumper): idem.
	Provide SCM bindings.

	* lily/include/object-key-dumper.hh (class Object_key_dumper): 
	new file. Serialize object keys.
	
	* lily/object-key.cc (dump): new function.
	(as_scheme): new virtual function
	(undump): new function
	(undumpers): new table.

	* lily/include/global-context.hh (Context): take \score key upon init.

	* lily/object-key-dumper.cc (serialize_key): new file.

	* lily/include/object-key-dumper.hh (class Object_key_dumper): new file.

	* lily/lily-lexer.cc: remove \quote.

	* lily/lookup.cc (triangle): rewrite, obviating symmetric_x_triangle().

	* lily/context.cc (Context): take key argument in ctor.
	(create_context): new function

	* lily/grob.cc (Grob): take key argument in ctor.  

	* lily/lilypond-key.cc (do_compare): new file.

	* lily/object-key.cc (Object_key): new file.

	* lily/include/object-key.hh (class Object_key): new file.

	* lily/include/lilypond-key.hh (class Lilypond_context_key): new file.

2004-11-13  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond-book.itely: add small warning about
	noindent default in lilypond-book.

	* Documentation/user/converters.itely: add examples for convert-ly.

	* Documentation/user/examples.itely: change version string in templates
	to 2.4.0.

2004-11-12  Karl Hammar  <karl@aspodata.se>

	* GNUmakefile.in (local-WWW-post): `find ...` overflows the
	cmdline, use xargs instead (backportme)

2004-11-10  Andreas Scherer  <andreas_mutopia@freenet.de>
	
	* Documentation/user/: Numerous fixes in the user manual.

2004-11-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/parser.yy (re_rhythmed_music): search music expression for